# AIVOA_Task1-2

./: README.md  README_1.md  README_2.md
Task1-backend/: demo_tools.py  main.py  pyproject.toml  requirements.txt  test.db
Task1-backend/app/: database.py  schemas.py
Task1-backend/app/agent/: graph.py
Task1-backend/app/agent/tools/: interaction_tools.py
Task1-backend/app/models/: models.py
Task1-backend/app/routes/: chat.py  hcps.py  interactions.py  materials.py
task1-frontend/: package-lock.json
